# solana-vanity-cuda

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  run
.github/workflows/: build-artifact.yml  build-sm86.yml  build-sm89.yml  build-windows-artifacts.yml
src/: config.h  fixed16_table.h  main.cpp
src/cuda-headers/: gpu_common.h
src/ed25519-cuda/field/: fe.cu  fe.h
src/ed25519-cuda/group/: ge.cu  ge.h  precomp_data.h
src/ed25519-cuda/hash/: sha512.cu  sha512.h
src/ed25519-cuda/internal/: common.cuh  fixedint.h
src/ed25519-cuda/scalar/: sc.cu
src/search/: base58_prefix.cuh  fixed16_table_loader.cu  fixed16_table_loader.h  match_record.h  result_writer.cpp  result_writer.h  vanity_kernel.cu  vanity_kernel.cuh  vanity_search.cu  vanity_search.h
src/sgx-ecc-ed25519/: fe.c
tools/: fixed16_sha256.cpp  fixed16_sha256.h  fixed16_table_main.cpp  fixed16_table_tool.cpp  fixed16_table_tool.h
